# mnemo

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: basic_usage.py  claude_assistant.py  mcp_server_example.py
mnemo/: cli.py  exceptions.py
mnemo/core/: __init__.py  chunker.py  embedder.py  memory.py  retriever.py  store.py
mnemo/integrations/: __init__.py  claude.py
mnemo/mcp/: server.py
mnemo/utils/: __init__.py  scoring.py
tests/: test_chunker.py  test_memory.py  test_retriever.py
