[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemo"
version = "0.1.0"
description = "Persistent memory layer for LLM applications."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Deepanshu Shukla" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "rank_bm25>=0.2.2",
  "sentence-transformers>=2.7",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
mcp = ["mcp>=1.0.0"]
dev = ["pytest>=8.0"]

[project.scripts]
mnemo = "mnemo.cli:main"

[tool.setuptools.packages.find]
include = ["mnemo*"]
